# priceboard-server

./: Cargo.toml  LICENSE
src/: main.rs
src/common/: mod.rs  obj.rs
src/common/consts/: data_type.rs  mod.rs  req.rs
src/config/: data_config.rs  mod.rs
src/fetcher/: coin.rs  mod.rs  stock.rs
src/services/: item_list.rs  mod.rs  price.rs
